добавлена и стилизована googleMap через vue components

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="about" lang="ru">
   <head>
     <meta charset="utf-8">
     <meta name="description" content="Разработка и сопровождение сайтов и веб приложений">
@@ -9,7 +9,7 @@
     <style>.svg-use,.svg_next{max-width: 2rem;}</style>
     <title>Обо мне</title>
   <link rel="icon" type="image/png" sizes="32x32" href="https://yuliyavolkova.github.io/portfolio_pages/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="https://yuliyavolkova.github.io/portfolio_pages/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-16x16.png"><link rel="shortcut icon" href="https://yuliyavolkova.github.io/portfolio_pages/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon.ico"><link href="https://yuliyavolkova.github.io/portfolio_pages/./assets/css/normalize.css" rel="stylesheet"><link href="https://yuliyavolkova.github.io/portfolio_pages/./assets/css/styles.about.css" rel="stylesheet"></head>
-  <body>
+  <body class="about">
     <!--[if lt IE 8]> <p class="chromeframe">Похоже, что ты используешь устаревший браузер, друг. Пожалуйста, <a href="http:// browsehappy.com/">скачай новый браузер абсолютно бесплатно</a> или <a href="http://www.google.com/chromeframe/?redirect=true">активируй Google Chrome Frame</a></p> <![endif]-->
     <div class="l-wrapper">
       <header class="l-section l-hero" data-section="1section">
@@ -124,91 +124,89 @@
       </section>
       <section class="l-section l-last" data-section="3section">
         <div class="l-map-container"></div>
-        <div class="l-layout-first">
-          <div class="l-contacts">
-            <div class="c-contacts">
-              <div class="c-contacts__header">
-                <svg class="svg_dash">
-                  <use xlink:href="../assets/images/sprites/sprite.svg#dash">
-                    <title>dash</title>
-                  </use>
-                </svg>
-                <h3 class="h-title-article">Контакты</h3>
-                <svg class="svg_dash">
-                  <use xlink:href="../assets/images/sprites/sprite.svg#dash">
-                    <title>dash</title>
-                  </use>
-                </svg>
-              </div>
-              <div class="c-contacts__content">
-                <ul class="c-contacts__list">
-                  <li class="c-contacts__row"><a class="c-contacts__link" href="skype:yuliyawolf?add" target="_blank">
-                      <svg class="svg_skype">
-                        <use xlink:href="../assets/images/sprites/sprite.svg#skype">
-                          <title>skype</title>
-                        </use>
-                      </svg><span>skype_kdn</span></a></li>
-                  <li class="c-contacts__row"><a class="c-contacts__link" href="mailto:someone@example.com" target="_blank">
-                      <svg class="svg_mail">
-                        <use xlink:href="../assets/images/sprites/sprite.svg#mail">
-                          <title>mail</title>
-                        </use>
-                      </svg><span>astachov@gmail.com</span></a></li>
-                  <li class="c-contacts__row"><a class="c-contacts__link" href="tel:+7-800-000-392-10" target="_blank">
-                      <svg class="svg_phone">
-                        <use xlink:href="../assets/images/sprites/sprite.svg#phone">
-                          <title>phone</title>
-                        </use>
-                      </svg><span>+7-800-000-392-10</span></a></li>
-                  <li class="c-contacts__row"><a class="c-contacts__link" href="https://www.google.com/maps/search/?api=1&amp;query=36.26577,-92.54324" target="_blank">
-                      <svg class="svg_map-marker">
-                        <use xlink:href="../assets/images/sprites/sprite.svg#map_marker">
-                          <title>map_marker</title>
-                        </use>
-                      </svg><span>г.Новосибирск, ул. Инская, д. 5</span></a></li>
-                </ul>
-              </div>
+        <div class="l-contacts">
+          <div class="c-contacts">
+            <div class="c-contacts__header">
+              <svg class="svg_dash">
+                <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                  <title>dash</title>
+                </use>
+              </svg>
+              <h3 class="h-title-article">Контакты</h3>
+              <svg class="svg_dash">
+                <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                  <title>dash</title>
+                </use>
+              </svg>
+            </div>
+            <div class="c-contacts__content">
+              <ul class="c-contacts__list">
+                <li class="c-contacts__row"><a class="c-contacts__link" href="skype:yuliyawolf?add" target="_blank">
+                    <svg class="svg_skype">
+                      <use xlink:href="../assets/images/sprites/sprite.svg#skype">
+                        <title>skype</title>
+                      </use>
+                    </svg><span>skype_kdn</span></a></li>
+                <li class="c-contacts__row"><a class="c-contacts__link" href="mailto:someone@example.com" target="_blank">
+                    <svg class="svg_mail">
+                      <use xlink:href="../assets/images/sprites/sprite.svg#mail">
+                        <title>mail</title>
+                      </use>
+                    </svg><span>astachov@gmail.com</span></a></li>
+                <li class="c-contacts__row"><a class="c-contacts__link" href="tel:+7-800-000-392-10" target="_blank">
+                    <svg class="svg_phone">
+                      <use xlink:href="../assets/images/sprites/sprite.svg#phone">
+                        <title>phone</title>
+                      </use>
+                    </svg><span>+7-800-000-392-10</span></a></li>
+                <li class="c-contacts__row"><a class="c-contacts__link" href="https://www.google.com/maps/search/?api=1&amp;query=59.83428, 30.125099" target="_blank">
+                    <svg class="svg_map-marker">
+                      <use xlink:href="../assets/images/sprites/sprite.svg#map_marker">
+                        <title>map_marker</title>
+                      </use>
+                    </svg><span>г.Новосибирск, ул. Инская, д. 5</span></a></li>
+              </ul>
             </div>
           </div>
-          <footer class="l-footer">
-            <div class="l-container">
-              <div class="l-footer__nav">
-                <ul class="c-nav__list">
-                  <li class="c-nav__item"><a class="c-nav__link" href="./my_works.html">мои работы</a></li>
-                  <li class="c-nav__item"><a class="c-nav__link" href="./blog.html">блог</a></li>
-                  <li class="c-nav__item"><a class="c-nav__link" href="#">обо мне</a></li>
-                  <li class="c-nav__item"><a class="c-nav__link" href="../index.html#login">авторизация</a></li>
-                </ul>
-              </div>
-              <div class="l-footer__text"><span>Я веб-разработчик из Санкт-Петербурга, и этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool.</span></div>
-              <ul class="l-footer__social">
-                <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/pages/about.html" target="_blank">
-                    <svg class="svg-use">
-                      <use xlink:href="../assets/images/sprites/sprite.svg#vk">
-                        <title>vk</title>
-                      </use>
-                    </svg></a></li>
-                <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
-                    <svg class="svg-use">
-                      <use xlink:href="../assets/images/sprites/sprite.svg#github">
-                        <title>github</title>
-                      </use>
-                    </svg></a></li>
-                <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
-                    <svg class="svg-use">
-                      <use xlink:href="../assets/images/sprites/sprite.svg#in">
-                        <title>in</title>
-                      </use>
-                    </svg></a></li>
-              </ul>
-              <ul class="c-copy c-copy_footer">
-                <li class="c-copy_item">&copy;&nbsp;Yuliya Volkova</li>
-                <li class="c-copy_item">создано в &laquo;&nbsp;<a href="https://loftschool.com/" target="_blank">LoftSchool</a>&nbsp;&raquo;</li>
-                <li class="c-copy_item">2018</li>
+        </div>
+        <footer class="l-footer">
+          <div class="l-container">
+            <div class="l-footer__nav">
+              <ul class="c-nav__list">
+                <li class="c-nav__item"><a class="c-nav__link" href="./my_works.html">мои работы</a></li>
+                <li class="c-nav__item"><a class="c-nav__link" href="./blog.html">блог</a></li>
+                <li class="c-nav__item"><a class="c-nav__link" href="#">обо мне</a></li>
+                <li class="c-nav__item"><a class="c-nav__link" href="../index.html#login">авторизация</a></li>
               </ul>
             </div>
-          </footer>
-        </div>
+            <div class="l-footer__text"><span>Я веб-разработчик из Санкт-Петербурга, и этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool.</span></div>
+            <ul class="l-footer__social">
+              <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/pages/about.html" target="_blank">
+                  <svg class="svg-use">
+                    <use xlink:href="../assets/images/sprites/sprite.svg#vk">
+                      <title>vk</title>
+                    </use>
+                  </svg></a></li>
+              <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
+                  <svg class="svg-use">
+                    <use xlink:href="../assets/images/sprites/sprite.svg#github">
+                      <title>github</title>
+                    </use>
+                  </svg></a></li>
+              <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
+                  <svg class="svg-use">
+                    <use xlink:href="../assets/images/sprites/sprite.svg#in">
+                      <title>in</title>
+                    </use>
+                  </svg></a></li>
+            </ul>
+            <ul class="c-copy c-copy_footer">
+              <li class="c-copy_item">&copy;&nbsp;Yuliya Volkova</li>
+              <li class="c-copy_item">создано в &laquo;&nbsp;<a href="https://loftschool.com/" target="_blank">LoftSchool</a>&nbsp;&raquo;</li>
+              <li class="c-copy_item">2018</li>
+            </ul>
+          </div>
+        </footer>
       </section>
       <div class="l-hamburger l-hamburger_about">
         <nav class="c-hamburger-nav"><a class="c-hamburger-nav__target" href=""><span class="c-hamburger-nav__fake"></span></a>
