--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
   <body class="hero">
     <!--[if lt IE 8]> <p class="chromeframe">Похоже, что ты используешь устаревший браузер, друг. Пожалуйста, <a href="http:// browsehappy.com/">скачай новый браузер абсолютно бесплатно</a> или <a href="http://www.google.com/chromeframe/?redirect=true">активируй Google Chrome Frame</a></p> <![endif]-->
     <div class="l-wrapper">
-      <div class="l-parallax__container"></div>
+      <div class="l-parallax__container" id="parallax">
+        <div class="parallax-layer" data-speed="0.01"><img class="parallax-layer__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_1.png" alt=""></div>
+        <div class="parallax-layer" data-speed="0.02"><img class="parallax-layer__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_2.png" alt=""></div>
+        <div class="parallax-layer" data-speed="0.03"><img class="parallax-layer__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_3.png" alt=""></div>
+        <div class="parallax-layer" data-speed="0.04"><img class="parallax-layer__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_4.png" alt=""></div>
+        <div class="parallax-layer" data-speed="0.05"><img class="parallax-layer__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_5.png" alt=""></div>
+        <div class="parallax-layer" data-speed="0.06"><img class="parallax-layer__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_6.png" alt=""></div>
+        <div class="parallax-layer" data-speed="0.07"><img class="parallax-layer__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_7.png" alt=""></div>
+        <div class="parallax-layer" data-speed="0.08"><img class="parallax-layer__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_8.png" alt=""></div>
+        <div class="parallax-layer" data-speed="0.09"><img class="parallax-layer__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_9.png" alt=""></div>
+        <div class="parallax-layer" data-speed="0.1"><img class="parallax-layer__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_10.png" alt=""></div>
+      </div>
       <div class="l-login__button">
         <button class="c-button" id="targetLogin"><span class="c-button__text">Авторизоваться</span></button>
       </div>
@@ -117,14 +128,14 @@
             </div>
           </div>
         </div>
-        <footer class="l-copy">
-          <ul class="c-copy">
-            <li class="c-copy_item">&copy;&nbsp;Yuliya Volkova</li>
-            <li class="c-copy_item">создано в &laquo;&nbsp;<a href="https://loftschool.com/" target="_blank">LoftSchool</a>&nbsp;&raquo;</li>
-            <li class="c-copy_item">2018</li>
-          </ul>
-        </footer>
       </div>
+      <footer class="l-copy">
+        <ul class="c-copy">
+          <li class="c-copy_item">&copy;&nbsp;Yuliya Volkova</li>
+          <li class="c-copy_item">создано в &laquo;&nbsp;<a href="https://loftschool.com/" target="_blank">LoftSchool</a>&nbsp;&raquo;</li>
+          <li class="c-copy_item">2018</li>
+        </ul>
+      </footer>
     </div>
   <script type="text/javascript" src="https://yuliyavolkova.github.io/portfolio_pages/app/common.bundle.js"></script><script type="text/javascript" src="https://yuliyavolkova.github.io/portfolio_pages/app/index.bundle.js"></script></body>
 </html>
