--- a/pages/blog.html
+++ b/pages/blog.html
@@ -13,73 +13,139 @@
     <!--[if lt IE 8]> <p class="chromeframe">Похоже, что ты используешь устаревший браузер, друг. Пожалуйста, <a href="http:// browsehappy.com/">скачай новый браузер абсолютно бесплатно</a> или <a href="http://www.google.com/chromeframe/?redirect=true">активируй Google Chrome Frame</a></p> <![endif]-->
     <div class="l-wrapper">
       <header class="l-section l-hero l-hero_blog">
-        <ul class="l-hero__social">
-          <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/pages/about.html" target="_blank">
-              <svg class="svg-use">
-                <use xlink:href="../assets/images/sprites/sprite.svg#vk">
-                  <title>vk</title>
-                </use>
-              </svg></a></li>
-          <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
-              <svg class="svg-use">
-                <use xlink:href="../assets/images/sprites/sprite.svg#github">
-                  <title>github</title>
-                </use>
-              </svg></a></li>
-          <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
-              <svg class="svg-use">
-                <use xlink:href="../assets/images/sprites/sprite.svg#in">
-                  <title>in</title>
-                </use>
-              </svg></a></li>
-        </ul>
-        <div class="l-hero__develop l-hero__develop_blog">
-          <div class="c-developer">
-            <div class="c-developer__img-wrap" style="background-image: url('../assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-developer__img visually-hidden" alt="" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/content/photo.jpg"></div>
-            <div class="c-developer__content">
-              <div class="c-develop_blog-header">
-                <svg class="svg_dash">
-                  <use xlink:href="../assets/images/sprites/sprite.svg#dash">
-                    <title>dash</title>
+        <div class="l-scroll-parallax-container">
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_1.png" alt=""></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_2.png" alt=""></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_3.png" alt=""></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_4.png" alt=""></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_5.png" alt=""></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_6.png" alt=""></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_7.png" alt=""></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_8.png" alt=""></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/decor/bg/parallax/layer_9.png" alt=""></div>
+          <ul class="l-hero__social">
+            <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/pages/about.html" target="_blank">
+                <svg class="svg-use">
+                  <use xlink:href="../assets/images/sprites/sprite.svg#vk">
+                    <title>vk</title>
                   </use>
-                </svg>
-                <h1 class="h-title-section h-title-section_color">блог</h1>
-                <svg class="svg_dash">
-                  <use xlink:href="../assets/images/sprites/sprite.svg#dash">
-                    <title>dash</title>
+                </svg></a></li>
+            <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
+                <svg class="svg-use">
+                  <use xlink:href="../assets/images/sprites/sprite.svg#github">
+                    <title>github</title>
                   </use>
-                </svg>
-                <svg class="svg_hero-blog">
-                  <use xlink:href="../assets/images/sprites/sprite.svg#blog_header">
-                    <title>blog_header</title>
+                </svg></a></li>
+            <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
+                <svg class="svg-use">
+                  <use xlink:href="../assets/images/sprites/sprite.svg#in">
+                    <title>in</title>
                   </use>
-                </svg>
+                </svg></a></li>
+          </ul>
+          <div class="l-hamburger l-hamburger_about">
+            <nav class="c-hamburger-nav"><a class="c-hamburger-nav__target" id="openOverlay" href="">
+                <svg class="svg_hamburger" id="hamburger" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 40 35">
+                  <path fill="#FFFFFF" d="M40,2.5C40,3.881,38.881,5,37.5,5h-35C1.119,5,0,3.881,0,2.5l0,0C0,1.119,1.119,0,2.5,0h35C38.881,0,40,1.119,40,2.5L40,2.5z" id="firstLine"></path>
+                  <path fill="#FFFFFF" d="M40,17.5c0,1.381-1.119,2.5-2.5,2.5h-35C1.119,20,0,18.881,0,17.5l0,0C0,16.119,1.119,15,2.5,15h35C38.881,15,40,16.119,40,17.5L40,17.5z" id="centerLine"></path>
+                  <path fill="#FFFFFF" d="M40,32.5c0,1.381-1.119,2.5-2.5,2.5h-35C1.119,35,0,33.881,0,32.5l0,0C0,31.119,1.119,30,2.5,30h35C38.881,30,40,31.119,40,32.5L40,32.5z" id="lastLine"></path>
+                </svg></a>
+              <script type="template/text" id="hamburgerTemplate"><a class="c-hamburger-nav__close c-hamburger-nav__close" id="closeOverlay" href="">
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 40 35" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <path fill="#FFFFFF" d="M40,2.5C40,3.881,38.881,5,37.5,5h-35C1.119,5,0,3.881,0,2.5l0,0C0,1.119,1.119,0,2.5,0h35C38.881,0,40,1.119,40,2.5L40,2.5z" id="firstLine"></path>
+                    <path fill="#FFFFFF" d="M40,17.5c0,1.381-1.119,2.5-2.5,2.5h-35C1.119,20,0,18.881,0,17.5l0,0C0,16.119,1.119,15,2.5,15h35C38.881,15,40,16.119,40,17.5L40,17.5z" id="centerLine"></path>
+                    <path fill="#FFFFFF" d="M40,32.5c0,1.381-1.119,2.5-2.5,2.5h-35C1.119,35,0,33.881,0,32.5l0,0C0,31.119,1.119,30,2.5,30h35C38.881,30,40,31.119,40,32.5L40,32.5z" id="lastLine"></path>
+                  </svg></a>
+                <ul class="c-hamburger-nav__list">
+                  <li class="c-hamburger-nav__item">
+                    <svg class="svg_dash">
+                      <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                        <title>dash</title>
+                      </use>
+                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="./my_works.html">мои работы</a>
+                    <svg class="svg_dash">
+                      <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                        <title>dash</title>
+                      </use>
+                    </svg>
+                  </li>
+                  <li class="c-hamburger-nav__item">
+                    <svg class="svg_dash">
+                      <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                        <title>dash</title>
+                      </use>
+                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="#">блог</a>
+                    <svg class="svg_dash">
+                      <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                        <title>dash</title>
+                      </use>
+                    </svg>
+                  </li>
+                  <li class="c-hamburger-nav__item">
+                    <svg class="svg_dash">
+                      <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                        <title>dash</title>
+                      </use>
+                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="./about.html">обо мне</a>
+                    <svg class="svg_dash">
+                      <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                        <title>dash</title>
+                      </use>
+                    </svg>
+                  </li>
+                  <li class="c-hamburger-nav__item">
+                    <svg class="svg_dash">
+                      <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                        <title>dash</title>
+                      </use>
+                    </svg><a class="c-hamburger-nav__link h-title-section h-title-section_color" href="../index.html#login">авторизация</a>
+                    <svg class="svg_dash">
+                      <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                        <title>dash</title>
+                      </use>
+                    </svg>
+                  </li>
+                </ul>
+              </script>
+            </nav>
+          </div>
+          <div class="l-hero__develop l-hero__develop_blog">
+            <div class="c-developer">
+              <div class="c-developer__img-wrap" style="background-image: url('../assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-developer__img visually-hidden" alt="" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/content/photo.jpg"></div>
+              <div class="c-developer__content">
+                <div class="c-develop_blog-header">
+                  <svg class="svg_dash">
+                    <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                      <title>dash</title>
+                    </use>
+                  </svg>
+                  <h1 class="h-title-section h-title-section_color">блог</h1>
+                  <svg class="svg_dash">
+                    <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                      <title>dash</title>
+                    </use>
+                  </svg>
+                  <svg class="svg_hero-blog">
+                    <use xlink:href="../assets/images/sprites/sprite.svg#blog_header">
+                      <title>blog_header</title>
+                    </use>
+                  </svg>
+                </div>
+                <h2 class="c-developer__desc c-developer__desc_blog">Статьи, которые я написал</h2>
               </div>
-              <h2 class="c-developer__desc c-developer__desc_blog">Статьи, которые я написал</h2>
             </div>
           </div>
-        </div>
-        <div class="l-hamburger">
-          <nav class="c-hamburger-nav"><a class="c-hamburger-nav__target" href=""><span class="c-hamburger-nav__fake"></span></a>
-            <ul class="c-hamburger-nav__list visually-hidden">
-              <li class="c-hamburger-nav__item"><a class="c-hamburger-nav__link" href="./my_works.html">мои работы</a></li>
-              <li class="c-hamburger-nav__item"><a class="c-hamburger-nav__link" href="#">блог</a></li>
-              <li class="c-hamburger-nav__item"><a class="c-hamburger-nav__link" href="./about.html">обо мне</a></li>
-              <li class="c-hamburger-nav__item"><a class="c-hamburger-nav__link" href="../index.html#login">авторизация</a></li>
-            </ul>
-          </nav>
-        </div>
-      </header>
-      <section class="l-section l-main">
-        <div class="l-main__top">
-          <svg class="svg_main-top_one-color">
-            <use xlink:href="../assets/images/sprites/sprite.svg#bg">
-              <title>bg</title>
-            </use>
-          </svg>
-        </div>
-        <div class="l-main__wrapper l-main_blog">
+          <div class="l-main__top">
+            <svg class="svg_main-top_one-color">
+              <use xlink:href="../assets/images/sprites/sprite.svg#bg">
+                <title>bg</title>
+              </use>
+            </svg>
+          </div>
+          <section class="l-section l-main l-main parallax__content">
+            <div class="l-main__wrapper l-main_blog">
 <div class="c-blog">
+  <div class="c-blog__menu-swipe"></div>
   <aside class="c-blog__aside">
     <nav class="c-blog__nav">
       <ul class="c-blog__nav-list">
@@ -119,46 +185,48 @@
     </article>
   </main>
 </div>
-          <footer class="l-footer">
-            <div class="l-container">
-              <div class="l-footer__nav">
-                <ul class="c-nav__list">
-                  <li class="c-nav__item"><a class="c-nav__link" href="./my_works.html">мои работы</a></li>
-                  <li class="c-nav__item"><a class="c-nav__link" href="#">блог</a></li>
-                  <li class="c-nav__item"><a class="c-nav__link" href="./about.html">обо мне</a></li>
-                  <li class="c-nav__item"><a class="c-nav__link" href="../index.html#login">авторизация</a></li>
-                </ul>
-              </div>
-              <div class="l-footer__text"><span>Я веб-разработчик из Санкт-Петербурга, и этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool.</span></div>
-              <ul class="l-footer__social">
-                <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/pages/about.html" target="_blank">
-                    <svg class="svg-use">
-                      <use xlink:href="../assets/images/sprites/sprite.svg#vk">
-                        <title>vk</title>
-                      </use>
-                    </svg></a></li>
-                <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
-                    <svg class="svg-use">
-                      <use xlink:href="../assets/images/sprites/sprite.svg#github">
-                        <title>github</title>
-                      </use>
-                    </svg></a></li>
-                <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
-                    <svg class="svg-use">
-                      <use xlink:href="../assets/images/sprites/sprite.svg#in">
-                        <title>in</title>
-                      </use>
-                    </svg></a></li>
-              </ul>
-              <ul class="c-copy c-copy_footer">
-                <li class="c-copy_item">&copy;&nbsp;Yuliya Volkova</li>
-                <li class="c-copy_item">создано в &laquo;&nbsp;<a href="https://loftschool.com/" target="_blank">LoftSchool</a>&nbsp;&raquo;</li>
-                <li class="c-copy_item">2018</li>
-              </ul>
+              <footer class="l-footer">
+                <div class="l-container">
+                  <div class="l-footer__nav">
+                    <ul class="c-nav__list">
+                      <li class="c-nav__item"><a class="c-nav__link" href="./my_works.html">мои работы</a></li>
+                      <li class="c-nav__item"><a class="c-nav__link" href="#">блог</a></li>
+                      <li class="c-nav__item"><a class="c-nav__link" href="./about.html">обо мне</a></li>
+                      <li class="c-nav__item"><a class="c-nav__link" href="../index.html#login">авторизация</a></li>
+                    </ul>
+                  </div>
+                  <div class="l-footer__text"><span>Я веб-разработчик из Санкт-Петербурга, и этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool.</span></div>
+                  <ul class="l-footer__social">
+                    <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/pages/about.html" target="_blank">
+                        <svg class="svg-use">
+                          <use xlink:href="../assets/images/sprites/sprite.svg#vk">
+                            <title>vk</title>
+                          </use>
+                        </svg></a></li>
+                    <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
+                        <svg class="svg-use">
+                          <use xlink:href="../assets/images/sprites/sprite.svg#github">
+                            <title>github</title>
+                          </use>
+                        </svg></a></li>
+                    <li class="l-footer__social-item"><a class="l-footer__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/" target="_blank">
+                        <svg class="svg-use">
+                          <use xlink:href="../assets/images/sprites/sprite.svg#in">
+                            <title>in</title>
+                          </use>
+                        </svg></a></li>
+                  </ul>
+                  <ul class="c-copy c-copy_footer">
+                    <li class="c-copy_item">&copy;&nbsp;Yuliya Volkova</li>
+                    <li class="c-copy_item">создано в &laquo;&nbsp;<a href="https://loftschool.com/" target="_blank">LoftSchool</a>&nbsp;&raquo;</li>
+                    <li class="c-copy_item">2018</li>
+                  </ul>
+                </div>
+              </footer>
             </div>
-          </footer>
+          </section>
         </div>
-      </section>
+      </header>
     </div>
   <script type="text/javascript" src="https://yuliyavolkova.github.io/portfolio_pages/app/common.bundle.js"></script><script type="text/javascript" src="https://yuliyavolkova.github.io/portfolio_pages/app/blog.bundle.js"></script></body>
 </html>
