добавлен прилоадер загрузки картинок на все страницы и анимированы шторки гамбургер меню

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -106,6 +106,8 @@
                     </svg>
                   </li>
                 </ul>
+                <div class="overlay-section section-left"></div>
+                <div class="overlay-section section-right"></div>
               </script>
             </nav>
           </div>
@@ -227,6 +229,18 @@
           </section>
         </div>
       </header>
+    </div>
+    <div id="loader-wrapper">
+      <div id="loader">
+        <svg class="svg_preloader" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="144px" height="144px" viewBox="0 0 144 144">
+          <circle id="bigCircle" opacity="0.4" fill="none" stroke="#FFFFFF" stroke-width="4" stroke-miterlimit="10" cx="72" cy="71.999" r="70"></circle>
+          <circle id="middleCircle" opacity="0.7" fill="none" stroke="#FFFFFF" stroke-width="3.8938" stroke-miterlimit="10" cx="72" cy="72" r="55"></circle>
+          <circle id="smallCircle" fill="none" stroke="#FFFFFF" stroke-width="4" stroke-miterlimit="10" cx="72" cy="72" r="40"></circle>
+        </svg>
+        <div class="loader__text" id="preloaderText"><span></span></div>
+      </div>
+      <div class="loader-section section-left"></div>
+      <div class="loader-section section-right"></div>
     </div>
   <script type="text/javascript" src="https://yuliyavolkova.github.io/portfolio_pages/app/common.bundle.js"></script><script type="text/javascript" src="https://yuliyavolkova.github.io/portfolio_pages/app/blog.bundle.js"></script></body>
 </html>
